modified meeting and file controllers
